# cam_viz

./: .gitignore  CONTEXTE_PROJET.md  README.md  pyproject.toml  requirements.txt
examples/: exemples_utilisation.py  galerie.ipynb
src/cameroun_map/: __init__.py  adapter_dataset.py  cameroun_viz.py  export_powerbi.py
tests/: test_rapide.py
