[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cameroun-map"
version = "0.1.0"
description = "Visualisation cartographique du Cameroun à partir d'un CSV"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "mapclassify>=2.5.0",
]

[project.optional-dependencies]
fuzzy = ["thefuzz>=0.20.0", "python-Levenshtein>=0.21.0"]
powerbi = ["topojson>=1.7"]
osm = ["osmnx>=1.6.0"]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
